--- a/src/js/layout/footer.html
+++ b/src/js/layout/footer.html
@@ -3,7 +3,7 @@
     <a class="logo-font" ui-sref="app.home" ng-bind="::$ctrl.appName | lowercase"></a>
     <span class="attribution">
       &copy; {{::$ctrl.date | date:'yyyy'}}.
-      An interactive learning project from <a href="https://thinkster.io">Thinkster</a>.
+      Based on the <a href="https://thinkster.io">Thinkster</a> AngularJS realworld app project.
       Code licensed under MIT.
     </span>
   </div>
