fix: remove unnecessary modules

--- a/src/js/layout/header.html
+++ b/src/js/layout/header.html
@@ -2,9 +2,7 @@
   <div class="container">
 
     <a class="navbar-brand"
-      ui-sref="app.home"
-      ng-bind="::$ctrl.appName | lowercase">
-    </a>
+      ui-sref="app.home">admetricks</a>
 
   </div>
 </nav>
